; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/comctl32/extr_propsheet.c_detect_locale.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/comctl32/extr_propsheet.c_detect_locale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOCALE_USER_DEFAULT = common dso_local global i32 0, align 4
@LOCALE_IREADINGLAYOUT = common dso_local global i32 0, align 4
@LOCALE_RETURN_NUMBER = common dso_local global i32 0, align 4
@rtl = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @detect_locale to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @detect_locale() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @LOCALE_USER_DEFAULT, align 4
  %3 = load i32, i32* @LOCALE_IREADINGLAYOUT, align 4
  %4 = load i32, i32* @LOCALE_RETURN_NUMBER, align 4
  %5 = or i32 %3, %4
  %6 = bitcast i32* %1 to i8*
  %7 = call i64 @GetLocaleInfoW(i32 %2, i32 %5, i8* %6, i32 4)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %0
  %10 = load i32, i32* %1, align 4
  %11 = icmp eq i32 %10, 1
  br label %12

12:                                               ; preds = %9, %0
  %13 = phi i1 [ false, %0 ], [ %11, %9 ]
  %14 = zext i1 %13 to i32
  store i32 %14, i32* @rtl, align 4
  ret void
}

declare dso_local i64 @GetLocaleInfoW(i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
